# AgentOak

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.kiro/agents/: dev.json  researcher.json
.kiro/prompts/: dev.md  researcher.md
.kiro/specs/v0/: requirements.md
.kiro/specs/v1/: requirements.md
agentoak/: __init__.py  emulator.py  game_state.py  intro.py  ocr.py
agentoak/data/: __init__.py  maps.py  moves.py  moves_gen1.json  pokemon.py  pokemon_gen1.json
agentoak/memory/: __init__.py  addresses.py  reader.py
docs/data/: evolution-requirements.json  pokemon-locations.json  version-exclusives.json
docs/glitches/: item-duplication.md  mew-glitch.md
docs/research/: llm-pokemon-scaffold-notes.md
docs/routes/: 00-master-plan.md  02-pallet-to-pewter.md  03-pewter-to-cerulean.md  04-cerulean-to-vermilion.md  05-vermilion-to-celadon.md  06-11-quick-reference.md
docs/strategy/: 00-intro-sequence.md  01-starter-selection.md  game-corner.md  safari-zone.md
scripts/: analyze_version_region.py  debug_title_states.py  demo.py  extract_test_spec.py  find_version_rows.py  frame_by_frame_analysis.py  play_manual.py  test_intro.py
tests/: __init__.py  test_memory_reading.py
tests/fixtures/: README.md  bulbasaur.json  bulbasaur.state  charmander.json  charmander.state
